Create create action, its tests and documentation for projects
